// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders custom props 1`] = `
<textarea
  className="form__input"
  id="idTest"
  name="nameTest"
  placeholder="placeholderTest"
  required={false}
  title=""
  value="ola test value"
/>
`;

exports[`TextArea renders defaultProps 1`] = `
<textarea
  className="form__input"
  id=""
  name=""
  placeholder=""
  required={false}
  title=""
  value=""
/>
`;
